--- a/templates/base.html
+++ b/templates/base.html
@@ -8,41 +8,54 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+    <style>
+        body {
+          background: linear-gradient(to bottom right, #0080ff, #00ff80);
+        }
+      </style>
 </head>
 
 <body>
     <div style="margin-top: 50px;" class="ui container">
-        <h1 class="ui center aligned header">To Do App</h1>
-
+        <h1 class="ui center aligned header">To-Do App</h1>
+      
         <form class="ui form" action="/add" method="POST">
-            <div class="field">
-                <label>Task Title</label>
-                <input type="text" name="title" placeholder="Enter Todo..."><br>
+          <div class="field">
+            <label>Task Title</label>
+            <div class="ui input">
+              <input type="text" name="title" placeholder="Enter To-Do...">
             </div>
-            <button class="ui blue button" type="submit">Add</button>
+          </div>
+          <button class="ui blue button" type="submit">Add Task</button>
         </form>
-
+      
         <hr>
-
+      
         {% for todo in todo_list %}
         <div class="ui segment">
-            <p class="ui big header">{{todo.id }} | {{ todo.task }}</p>
-
-            {% if todo.complete == False %}
-            <span class="ui gray label">Not Complete</span>
-            {% else %}
-            <span class="ui green label">Completed</span>
-            {% endif %}
-            
-            {% if todo.complete == False %}
-            <a class="ui blue button" href="/update/{{ todo.id }}">Finished</a>
-            {% else %}
-            <a class="ui blue button" href="/update/{{ todo.id }}">Not Finished</a>
-            {% endif %}
-            <a class="ui red button" href="/delete/{{ todo.id }}">Delete</a>
+          <div class="ui grid">
+            <div class="twelve wide column">
+              <h2 class="ui header">{{todo.id }}. {{ todo.task }}</h2>
+            </div>
+            <div class="four wide right aligned column">
+              {% if todo.complete == False %}
+              <div class="ui blue label">Incomplete</div>
+              {% else %}
+              <div class="ui green label">Complete</div>
+              {% endif %}
+            </div>
+          </div>
+          <div class="ui divider"></div>
+          {% if todo.complete == False %}
+          <a class="ui blue button" href="/update/{{ todo.id }}">Mark Complete</a>
+          {% else %}
+          <a class="ui blue button" href="/update/{{ todo.id }}">Mark Incomplete</a>
+          {% endif %}
+          <a class="ui red button" href="/delete/{{ todo.id }}">Delete</a>
         </div>
         {% endfor %}
-    </div>
+      </div>
+      
 </body>
 
 </html>
