--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 
 <body>
     <div style="margin-top: 50px;" class="ui container">
-        <h1 class="ui center aligned header">To-Do App</h1>
+        <h1 class="ui center aligned header"> My To-Do App</h1>
       
         <form class="ui form" action="/add" method="POST">
           <div class="field">
@@ -31,7 +31,7 @@
       
         <hr>
       
-        {% for todo in todo_list %}
+        {% for todo in todo_list %
         <div class="ui segment">
           <div class="ui grid">
             <div class="twelve wide column">
